# Hue

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  start_hue.bat  update_hue.bat
.cursor/rules/: always-release-after-fix.mdc
.github/workflows/: daybuild.yml  release.yml
docs/: UPDATER.md
scripts/: build-local-updater.bat  build-update-installer.bat  hue-update.bat  release-product.ps1  start_hue.bat  update-installed-app.bat
scripts/lib/: serve-and-launch.ps1  stage-update.ps1
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  cargo_out.txt  tauri.conf.json  tauri.updater-local-daily.json  tauri.updater-local.json
src-tauri/capabilities/: default.json  desktop.json  updater.json
src-tauri/src/: commands.rs  lib.rs  main.rs  menu_logic.rs  workspace.rs
src/components/: PieMenu.tsx  PrefSelect.tsx  Preferences.tsx  SliceEditor.tsx  SliceEditorApp.tsx  TagInput.tsx  UpdateDialog.tsx  UpdatePrompt.tsx
src/hooks/: useAppUpdater.ts
src/lib/: appUpdater.ts  appearanceDefaults.ts  autoTags.ts  markingTrail.ts  ringGeometry.ts  sliceCounts.ts  workspace.ts
